[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scenes/Components/Weapon/Weapons/ProjectileWeapon.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Components/Damage/RangedDamageComponent.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Components/CriticalStrike/CriticalComponent.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Components/Accuracy/AccuracyComponent.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Components/Spread/AngleSpreadComponent.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Components/Weapon/Ammo/ProjectileAmmo.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Components/Weapon/Trigger/AutoTrigger.tscn" type="PackedScene" id=7]
[ext_resource path="res://Bullets/Projectile/ProjectileBullet/ProjectileBullet.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Weapons/Weapon_spritesheet.png" type="Texture" id=9]
[ext_resource path="res://Scenes/Components/Weapon/MuzzleFlash/MuzzleFlash.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Components/Weapon/Weapons/WeaponAttributes.gd" type="Script" id=11]

[sub_resource type="Resource" id=3]
script = ExtResource( 11 )
max_damage = 10.0
min_damage = 5.0
critical_chance = 0.2
critical_multiplier = 1.0
accuracy = 0.5
trigger_duration = 0.1
reload_duration = 1.0

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "fire"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -10, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0 ]
}

[node name="ProjectileWeapon" type="Node2D"]
script = ExtResource( 1 )
weapon_attributes = SubResource( 3 )
ranged_damage = NodePath("RangedDamageComponent")
critical = NodePath("CriticalComponent")
accuracy = NodePath("AccuracyComponent")
angle_spread = NodePath("AngleSpreadComponent")
trigger = NodePath("AutoTrigger")
projectile_ammo = NodePath("ProjectileAmmo")
fire_points = [ NodePath("Skin/FirePoint") ]
appearance = NodePath("Skin")
muzzle_flash = NodePath("Skin/MuzzleFlash")

[node name="RangedDamageComponent" parent="." instance=ExtResource( 2 )]
max_damage = 10.0
min_damage = 5.0

[node name="CriticalComponent" parent="." instance=ExtResource( 3 )]
critical_chance = 0.2

[node name="AccuracyComponent" parent="." instance=ExtResource( 4 )]

[node name="AngleSpreadComponent" parent="." instance=ExtResource( 5 )]
spread_range_degree = 5.0

[node name="AutoTrigger" parent="." instance=ExtResource( 7 )]
trigger_duration = 0.1

[node name="ProjectileAmmo" parent="." instance=ExtResource( 6 )]
rounds_per_clip = 30
reload_duration = 1.0
bullet_speed = 1500.0
bullet_life_span = 2.0
bullet_penetration_chance = 0.3
bullet_scene = ExtResource( 8 )

[node name="Skin" type="Node2D" parent="."]

[node name="weapon" type="Sprite" parent="Skin"]
texture = ExtResource( 9 )
region_enabled = true
region_rect = Rect2( 2, 19, 59, 25 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Skin"]
playback_speed = 15.0
anims/RESET = SubResource( 1 )
anims/fire = SubResource( 2 )

[node name="MuzzleFlash" parent="Skin" instance=ExtResource( 10 )]
position = Vector2( 29, -6 )

[node name="FirePoint" type="Position2D" parent="Skin"]
position = Vector2( 29, -6 )
